<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Healthy Kitchen33</string>
    <string name="internet_error_msg">Please check Your internet connection!</string>
    <string name="error_invalid_member">Invalid Member ID</string>
    <string name="error_invalid_password">Wrong Pin Code</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="error_invalid_phone">Invalid Phone</string>
    <string name="error_invalid_amount">Invalid Amount</string>
    <string name="invalid_amount">Invalid amount.</string>
    <string name="decimal_two_places_amount_check_error">Allow for only two digits after decimal</string>
    <string name="error_invalid_account_No">Invalid Account Number</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_nid">Invalid National Id Number</string>
    <string name="error_invalid_mobile">Enter a valid mobile number</string>
    <string name="pin_code_skip_text">skip</string>
    <string name="error_field_empty">This field is empty</string>
    <string name="error_field_sim_type">Please Select Sim Type</string>
    <string name="error_field_empty_mbl">Enter your mobile number</string>
    <string name="error_field_empty_pin">Enter your PIN Code</string>
    <string name="error_pin_empty">Please give PIN Code first</string>
    <string name="error_invalid_mobile_member">Your mobile number is invalid</string>
    <string name="no_internet_error">No network available, please check your WiFi or Data connection</string>
    <string name="see_connections">See connections</string>
    <string name="stop">Stop</string>
    <string name="permission_location_rationale">Please allow Location Permissions - Google requires this for your phone to scan for another phone’s Bluetooth. We do not use or store your location.</string>
    <string name="permission_write_rationale">OpenTrace needs save files for logs (Debug builds only)</string>
    <string name="ble_not_supported">This device does not support BLE</string>
    <string name="tv_onboarding_title">Help stop the spread of COVID-19 by turning Bluetooth on</string>
    <string name="tv_onboarding_desc">If you had close contact with a COVID-19 case, we help the health authorities call you more quickly, to provide guidance and care.</string>
    <string name="tv_onboarding_desc_sub">To protect those around you, OTC may also ask you to share your data.</string>
    <string name="i_want_to_help">I want to help</string>
    <string name="tv_howitworks_title">How OpenTrace works</string>
    <string name="tv_howitworks_explanation_1">We use Bluetooth signals to determine if you are near another OpenTrace user.</string>
    <string name="tv_howitworks_explanation_2">This proximity data is encrypted and stored only on your phone.</string>
    <string name="tv_howitworks_explanation_3">OTC will seek your consent to upload the data, if it\'s needed for contact tracing.</string>
    <string name="register_number">Register your mobile number</string>
    <string name="register_number_details">We\'ll contact you if you had close contact with a COVID-19 case.</string>
    <string name="register_number_family">Setting up for your family? \nUse their number instead of yours.</string>
    <string name="invalid_length">Needs to be 8-digits</string>
    <string name="invalid_number">Invalid Mobile Number</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="otp_sent">A 6-digit code has been sent to %s.</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="setup_app_permission">\Set up app permissions</string>
    <string name="setup_app_permission_title">Select \'<b>Yes</b>\' or \'<b>Allow</b>\' for the next few screens to set up.</string>
    <string name="bluetooth">1. Bluetooth</string>
    <string name="location_permissions">2. Location Permissions</string>
    <string name="battery_optimiser_opt">3. Battery Optimiser</string>
    <string name="notes">Android needs Location Permissions for Bluetooth to work. We don\'t have access to your physical location.</string>
    <string name="proceed">Proceed</string>
    <string name="continue_">Continue</string>
    <string name="get_otp">Get OTP</string>
    <string name="wrong_number"><u>Wrong Number?</u></string>
    <string name="app_permission_fully_setup">App permissions are fully set up</string>
    <string name="app_permission_fully_setup_desc">Please leave all settings on until the outbreak ends.</string>
    <string name="send_otp">We\'ll text you a One-Time Pin (OTP)</string>
    <string name="title_home">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_help">Help</string>
    <string name="how_to_help">How you can help stop the spread of COVID-19</string>
    <string name="help_action">Keep app open, and let it run in the background until the end of the outbreak</string>
    <string name="app_permission_status">App Permissions Status</string>
    <string name="bluetooth_on">Bluetooth: On</string>
    <string name="location_on">Location Permission: On</string>
    <string name="battery_optimiser">Battery Optimisation: Off</string>
    <string name="push_noti">Push Notification: On</string>
    <string name="share_this_app">Share this app</string>
    <string name="ask_friend">Ask friends and family to help</string>
    <string name="help_us_identify">Help stop the virus spread by allowing all permissions</string>
    <string name="restart_app_setup">Complete app setup</string>
    <string name="upload_data">Upload Data</string>
    <string name="for_official_use">For use by contact tracers</string>
    <string name="data_uploaded">Data has been uploaded to contact tracers</string>
    <string name="upload_agreement">By uploading, you agree to share with OTC your OpenTrace proximity data for the past 21 days. <b>We do not collect any geolocation or personal data.</b></string>
    <string name="enter_code">Enter Code</string>
    <string name="submit">Submit</string>
    <string name="open_location_setting">Application needs location permission in order to work. Do you want to enable location permission?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setup_incomplete">Setup is incomplete!</string>
    <string name="ack_title">Your consent is needed for the following:</string>
    <string name="ack_mobile">To store your mobile number in a secured OpenTrace registry</string>
    <string name="ack_data">To allow OpenTrace users to send OTC information of encounters with you, if they are confirmed or suspected to have COVID-19</string>
    <string name="otp">Please enter the OTP sent to your mobile phone via sms</string>
    <string name="keep_push_on">Keep push notifications on too, so we can alert you if the app is not scanning.</string>
    <string name="verification_failed">Verification failed. Please try again</string>
    <string name="invalid_otp">Wrong OTP entered</string>
    <string name="unknown_error">An error has occurred. Please try again</string>
    <string name="must_be_six_digit">Must be a 6-digit number</string>
    <string name="invalid_user">Your account has been disabled. Please contact support.</string>
    <string name="too_many_requests">Too many requests. Please try again later.</string>
    <string name="privacy_safeguards"><u>privacy safeguards</u></string>
    <string name="service_ok_title">OpenTrace is scanning to keep you safe! :)</string>
    <string name="service_ok_body">Restart phone if this notification disappears</string>
    <string name="service_not_ok_title">Oh no! :(</string>
    <string name="service_not_ok_body">OpenTrace is not scanning.</string>
    <string name="service_not_ok_action">Check app now</string>
    <string name="doctors">Doctors</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="food">FRESH FOOD</string>
    <string name="delivery">FAST DELIVERY</string>
    <string name="payment">EASY PAYMENT</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="hello_blank_fragment1">Hello blank fragment - 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment - 2</string>
    <string name="title_activity_user_profile">User profile</string>
    <string name="title_activity_create_chat">Create chat</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_chat_members">Members</string>
    <string name="title_activity_blocked_users">Block/Unblock users</string>
    <string name="title_activity_edit_room_members">Edit room members</string>
    <string name="title_activity_create_blog">Create blog post</string>
    <string name="title_activity_blog_post_details">Blog post details</string>
    <string name="title_activity_manage_contacts">Manage contacts</string>
    <string name="service_xmpp_session">XMPP Session Service</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="action_block_users">Block/Unblock users</string>
    <string name="action_leave_chat">Leave</string>
    <string name="action_chat_members">Members</string>
    <string name="action_destroy_chat">Destroy</string>
    <string name="action_change_room_name">Change room name</string>
    <string name="action_change_room_subject">Change room subject</string>
    <string name="action_add_to_contacts">Add user to contacts</string>
    <string name="action_remove_from_contacts">Remove user from contacts</string>
    <string name="action_delete_chat">Delete</string>
    <string name="action_about">About</string>
    <string name="title_tab_chat">Chat</string>
    <string name="title_tab_social">Social</string>
    <string name="title_rooms">ROOMS</string>
    <string name="title_people">PEOPLE</string>
    <string name="title_button_create_chat">Create chat</string>
    <string name="title_button_create_blog">Create blog</string>
    <string name="action_manage_contacts">Manage contacts</string>
    <string name="date_seconds_ago" tools:ignore="PluralsCandidate">%1$d seconds ago</string>
    <string name="date_seconds_now">just now</string>
    <string name="comment_created">Comment sent successfully</string>
    <string name="hint_edit_text">Enter text here</string>
    <string name="hint_enter_comment">Enter comment here</string>
    <string name="error">ERROR</string>
    <string name="loading">Loading &#8230;</string>
    <string name="sending_request">Sending the request &#8230;</string>
    <string name="empty_message">Empty message</string>
    <string name="error_create_chat">ERROR! Could not create chat.</string>
    <string name="error_login">ERROR! Could not log in, please verify your data.</string>
    <string name="search_user_hint">Search user</string>
    <string name="title_chat_members">Chat members</string>
    <string name="add_user_to_chat">Add</string>
    <string name="info">Info</string>
    <string name="exams">Exams</string>
</resources>