<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_exams"
            android:icon="@drawable/more"
            android:title="@string/exams"
            app:contentDescription="All Exams" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/transactions"
            android:title="@string/settings"
            app:contentDescription="All settings" />
    </group>

    <group
        android:id="@+id/nav_second_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/info"
            app:contentDescription="Detail description of developers" />
    </group>
</menu>