<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data class="SetupCompleteBinding">

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/on_boarding_banner"
                style="@style/OnboardingImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_opentrace_blue_transparent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/OnboardingTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_permission_fully_setup"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/on_boarding_banner" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc"
                style="@style/OnboardingDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_permission_fully_setup_desc"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <LinearLayout
                android:id="@+id/tv_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingRight="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc">

                <androidx.cardview.widget.CardView
                    android:id="@+id/share_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/light_blue"
                    app:cardCornerRadius="12dp"
                    app:cardMaxElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:selectableItemBackground"
                        android:padding="15dp">

                        <ImageView
                            android:id="@+id/info_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_baseline_person"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"

                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/keep_push_on"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            android:visibility="visible"
                            app:layout_constraintLeft_toRightOf="@id/info_icon"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--<FrameLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <include layout="@layout/button_and_progress" />
        </FrameLayout>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUser2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="user2"
            android:visibility="gone"
            app:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnUser1"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="user1"
            android:visibility="gone"
            app:backgroundTint="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/btnUser2"
            app:layout_constraintEnd_toStartOf="@+id/btnUser2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnUser2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:text="Continue"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUser2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

